packages/kit/test/apps/basics/src/routes/errors/load-server/+page.js
/** @type {import('@sveltejs/kit').Load} */
export async function load() {
	throw new Error('Crashing now');
}
